# MatrixMCU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindQemuSystemArm.cmake  FindSTM32F4xx.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake
ld/: stm32f401re.ld  stm32f405rg.ld  stm32f405rgt.ld  stm32f446re.ld
svd/: STM32F405.svd
